--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="box">
-            <div class="card">
-                <h2>hello world!</h2>
-                <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dolor voluptas incidunt eaque enim accusantium eum dignissimos assumenda natus excepturi illo, magni qui repellendus inventore dicta tenetur reprehenderit. Asperiores, molestiae.</p>
-            </div>
-            </div>
+    <div class="box">
+        <div class="imgbx">
+            <img src="images/mr bean.jpg" alt="mr bean image">
+        </div>
+        <div class="content">
+            <h2>MR BEAN<br><span>cartoon actot</span></h2>
         </div>
     </div>
 </body>
